Fix flow editor dimensions to avoid scrollbars.

--- a/frontend/src/app/flow-editor/flow-editor.component.css
+++ b/frontend/src/app/flow-editor/flow-editor.component.css
@@ -10,6 +10,7 @@
     border-bottom: 1px solid #AAA;
     overflow-y: auto;
     height: 3em;
+    box-sizing: content-block;
 }
 
 #program-header:not(.is-scrollable) > .hint-scrollable {
